# RootMotionCalculator

./: .gitignore  AnimationClipData.h  AnimationSimulatorModel.cpp  AnimationSimulatorModel.h  CMakeLists.txt  IReadOnlyStartRootMotionArgs.h  Main.cpp  RootMotionCalculator.cpp  RootMotionCalculator.h  RootMotionCalculatorTest.cc  RootPosition.cpp  RootPosition.h  StartRootMotionArgs.h  Testcpp.cpp  Vector3.cpp  Vector3.h  Vector3Nx.cpp  Vector3Nx.h
UnitTests/: CMakeLists.txt  RootMotionCalculatorTest.cpp
